# openSatCon

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_setup.sh  config.conf  featureslist.txt
Project Planning/: ganttchart.xlsx  logoconcept2.xcf  oransRunningNotes.txt  pitchslidesediting
Pseudocode/Testing/: Makefile  test.cpp
Testing/datainjest/: jsonparsertest.cpp
codingbasics/: Makefile  test  test.cpp
demo/: simulation.cpp
osc-daemon/: axistransforms.cpp  bodydynamics.cpp  craftcontroller.cpp  main.cpp  orbitalmaneuvers.cpp  orbitalrotations.cpp  osctypes.cpp  osctypes.hpp  planet.cpp
osc-daemon/Craft Build/: craft.json
osc-daemon/CraftBuild/: craft.json  craftcalcs.cpp  parsejson.cpp
osc-daemon/components/: component.cpp  component.hpp  fueltank.cpp  fueltank.hpp  sensor.cpp  test.cpp
osc-daemon/control/: attitudecontroller.cpp  attitudecontroller.hpp  craftcontroller.cpp  craftcontroller.hpp  scheduler.cpp  scheduler.hpp  task.cpp  task.hpp
osc-daemon/datainjest/: examplecraft.json  jsonparser.hpp
osc-daemon/orbitalmechanics/: axistransforms.cpp  axistransforms.hpp  bodydynamics.cpp  bodydynamics.hpp  orbitalmaneuvers.cpp  orbitalmaneuvers.hpp  planet.cpp  planet.hpp
src/: craftcontroller.cpp  datatypes.cpp  main.cpp  osctypes.cpp
src/components/: Actuator.cpp  Component.cpp  Component.hpp  FuelTank.cpp  actuator.cpp  component.cpp  component.hpp  fueltank.cpp  sensor.cpp
src/modules/: massobj.cpp
testing/axistransforms/: axisTransformsTest  axisTransformsTest.cpp
testing/components/: component_test.cpp
(+11 files in other folders)
